fix(docs): hack search thin enough to mostly fit and not disturb scrollbar

--- a/docs/src/components/side-nav/index.module.css
+++ b/docs/src/components/side-nav/index.module.css
@@ -10,6 +10,9 @@
 .logo {
   margin-bottom: var(--psLayoutSpacingLarge);
 }
+.search {
+  width: calc(100% - var(--psLayoutSpacingLarge));
+}
 .scrollable {
   margin-bottom: var(--psLayoutSpacingLarge);
   min-height: 0;
